--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -33,6 +33,16 @@ layout: default
     </p>
   </header>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ELP0NGSGLY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ELP0NGSGLY');
+</script>
+
   <article>
     <div class="affiliations text-center">
       <!-- Add more affiliation details here if needed -->
