update about july 2024

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -71,8 +71,13 @@ layout: default
     <ol>
         <li>
             <strong>Reconstructing the Evolutionary History of Virus Families:</strong> 
-            Much of this work has focused on expanding largely unexplored areas of the virosphere. Taxa like the ‘basal metazoans’ are vastly understudied and may provide insights into the long-term evolutionary history of virus families. The decreasing cost of metagenomic sequencing has broadened the species diversity in transcriptome studies. The secondary analysis of existing transcriptome data, known as transcriptome mining, can circumvent challenges like securing funding for virus discovery in less economically prioritized taxa. This approach has significantly contributed to the rapid expansion of our knowledge regarding virus biodiversity. We have recently used this method to explore the <a href="https://academic.oup.com/ve/article/9/1/veac124/6960983">Flaviviridae</a>. In addition, through a collaboration with <a href="https://www.gla.ac.uk/schools/infectionimmunity/staff/joegrove/">Dr. Joe Grove</a> we have <a href="https://www.biorxiv.org/content/10.1101/2024.02.06.579159v1.full">begun</a> exploring how structural information, particularly of proteins like the envelope can be combined with phylogenetics to greatly enhance evolutionary history reconstructions. 
+            Much of this work has focused on expanding largely unexplored areas of the virosphere. Taxa like the ‘basal metazoans’ are vastly understudied and may provide insights into the long-term evolutionary history of virus families. The decreasing cost of metagenomic sequencing has broadened the species diversity in transcriptome studies. The secondary analysis of existing transcriptome data, known as transcriptome mining, can circumvent challenges like securing funding for virus discovery in less economically prioritized taxa. This approach has significantly contributed to the rapid expansion of our knowledge regarding virus biodiversity. We have recently used this method to explore the <a href="https://academic.oup.com/ve/article/9/1/veac124/6960983">Flaviviridae</a>. 
         </li>
+        <br>
+        <li>
+            In collaboration with <a href="https://www.gla.ac.uk/schools/infectionimmunity/staff/joegrove/">Dr. Joe Grove</a> we have <a href="https://www.biorxiv.org/content/10.1101/2024.02.06.579159v1.full">begun</a> exploring how protein structural information, particularly from non-polymerase proteins (e.g., envelope) can be used to detect deep homology between the Flavivirdae clades that would be missed using sequence based comparisons alone. We then combined this structural information with phylogenetics to greatly enhance our evolutionary history reconstructions of the Flaviviridae. 
+        </li>
+        <br>
         <br>
         <li>
             <strong>Identifying Potential Viral Etiological Agents in Wildlife:</strong> 
@@ -80,7 +85,7 @@ layout: default
         </li>
     </ol>
     <p>
-        Outside of this, I have an interest in developing tools for virus discovery and phylogenetics. 
+        Outside of this, I have an interest in artifical intelligence and developing tools for virus discovery and phylogenetics. 
     </p>
     <p>
         Feel free to get in touch if you are after collaboration in any of these areas.
