--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -66,7 +66,7 @@ layout: default
         My master's thesis, under <a href="https://www.westernsydney.edu.au/hie/people/researchers/associate_professor_rachael_gallagher">Assoc Prof Rachael Gallagher</a> and <a href="https://micro.otago.ac.nz/our-people/teaching-research-and-support/jemma-geoghegan/">Prof Jemma Geoghegan</a>, focused on exploring the plant virosphere using transcriptome data.
     </p>
     <p>
-        Since beginning my Ph.D. in June 2021, I have dabbled in two main areas:
+        Since beginning my Ph.D. in June 2021, I have dabbled in three main areas:
     </p>
     <ol>
         <li>
@@ -75,6 +75,7 @@ layout: default
         </li>
         <br>
         <li>
+            <strong>Using Protein Structural Prediction to Reconstruct Virus Evolution:</strong>
             In collaboration with <a href="https://www.gla.ac.uk/schools/infectionimmunity/staff/joegrove/">Dr. Joe Grove</a> we have <a href="https://www.biorxiv.org/content/10.1101/2024.02.06.579159v1.full">begun</a> exploring how protein structural information, particularly from non-polymerase proteins (e.g., envelope) can be used to detect deep homology between the Flavivirdae clades that would be missed using sequence based comparisons alone. We then combined this structural information with phylogenetics to greatly enhance our evolutionary history reconstructions of the Flaviviridae. 
         </li>
         <br>
